# project_reviewer

./: .gitignore  README.md
code-review-agent/: .gitignore  Dockerfile  README.md  pyproject.toml
code-review-agent/.github/workflows/: eval.yml
code-review-agent/agent/: __init__.py  ast_analyzer.py  comment_formatter.py  context_packager.py  diff_fetcher.py  github_client.py  graph.py  llm.py  pipeline.py  state.py  static_analyzer.py  webhook_server.py
code-review-agent/agent/nodes/: __init__.py  evaluate.py  execute.py  generate.py  plan.py
code-review-agent/evals/: golden_dataset.jsonl  llm_judge.py  metrics.py  run_evals.py
code-review-agent/sandbox/: Dockerfile  __init__.py  executor.py  patch_applicator.py
code-review-agent/scripts/: export_graph.py  test_analysis.py  test_sandbox.py
code-review-agent/tests/: test_comment_formatter.py  test_patch_applicator.py
